integrate with Martinas solution
